@@ -7,6 +7,9 @@
 
 - Fixed a bug in nand usage causing save creation failure in WiiWare games
   like Tetris Party, FFCC My Life as a King and Brain Challenge.
+- Fixed the deletion of folder /tmp on nand emulation start up.
+- Added a workaround to fix a bug on file renaming causing the failure on 
+  the 2nd save in games like The Will of Dr.Frankenstein.
 
 
 [ d2x v2 ]
